Add interfaces for service classes and apply modern Java techniques
Co-authored-by: johnboyce <847974+johnboyce@users.noreply.github.com>